--- a/posts/2024-08-13-tidycensus-exploration/index.qmd
+++ b/posts/2024-08-13-tidycensus-exploration/index.qmd
@@ -56,13 +56,29 @@ my.theme <- theme(
   strip.text = element_text(color="black", size=14))
 ```
 
+## Data
+
 For this analysis, I'm interested in looking at the most recent
 state-level child poverty data available from the U.S. Census Bureau.
 The `tidycensus::` package allows API access to the decennial Census, as
-well as the more frequent American Community Survey (ACS).
+well as the more frequent American Community Survey (ACS), which I'll use in this project.
 
-The `tidycensus::load_variables()` function provides a simple way to
-query the available data within each product. Combining this with
+If you've worked with ACS data before, you may know that there are a few survey products offered in the ACS suite. Most commonly, the choice of data is between the 1-year estimates and the 5-year estimates.
+
+*What's the difference between these, and how do you choose which survey product to use for your purposes?*
+
+*  **1-year estimates**: Best used when the focus is on timeliness and the area in question has a sufficiently large population to support reliable estimates. Ideal for analyzing recent changes and trends in larger areas. *While these are more current estimates, these have wider margins of error and are not available for smaller geographic areas.*
+*  **5-year estimates**: Best used when you need detailed data for small areas or when you're comparing data across different geographies, especially if those geographies vary in population size. They are ideal for studying small populations, rural areas, or conducting detailed spatial analysis. *While these are less current than the 1-year estimates, they are more reliable and available at smaller geographic scales.*[^1]
+
+To start, I am interested in reviewing the most stable, geographically-available data on child poverty. Given that I'm less concerned with recency and more interested in broad availability, the ACS 5-year estimates are what I'll use here.
+
+[^1]: See the Census handbook for great detail: https://www.census.gov/programs-surveys/acs/library/handbooks/general.html.
+
+## Initial tour of key tidycensus::get_acs() function
+
+The `tidycensus::` package has so much to offer (and I still have plenty
+to learn!). The `tidycensus::load_variables()` function provides a simple way to
+query the available data within each survey. Combining this with
 `stringr::str_detect()` is a nice way to search through the tens of
 thousands of data series that are available through the U.S. Census API.
 
@@ -82,17 +98,15 @@ For this demo, I'll use the following series:
     poverty level:!!Male:!!Under 5 years
 -   *B17001_018*: Estimate!!Total:!!Income in the past 12 months below
     poverty level:!!Female:!!Under 5 years
-
-## Initial tour of key tidycensus::get_acs() function
-
-The `tidycensus::` package has so much to offer (and I still have plenty
-to learn!). There are a bunch of useful helper functions/arguments to
-assist in fetching data. Some noteworthy ones include:
+    
+There are a bunch of useful helper functions/arguments to
+assist in fetching data from the Census API. Some noteworthy ones include:
 
 -   Each variable returns the geography, an estimate, and the margin of
     error ("moe"). Geographies can span from states, regions and the
     country as a whole, down to areas like school districts, voting
     districts, census block groups, and many others.
+-   `survey=`: this defines the produce that you're using of the American Community Survey. Responses can include "acs1", "acs3", or (the default) "acs5".
 -   `summary_var=`: often the variable that you want would be made more
     meaningful as a ratio or with a demonminator. For example, the
     number of children in poverty could be useful on its own, but you're
@@ -108,6 +122,7 @@ assist in fetching data. Some noteworthy ones include:
 ```{r get_acs, include=TRUE}
 df <- get_acs(geography = 'state',
         variables = c('B01001_003', 'B01001_027', 'B17001_004', 'B17001_018'),
+        survey = 'acs5',
         year = 2022,
         output = 'wide')
 ```
@@ -284,6 +299,7 @@ df <- df %>%
 # considering a map like this one: https://observablehq.com/@observablehq/plot-us-bubble-map?intent=fork
 df_county <- get_acs(geography = 'county',
         variables = c('B01001_003', 'B01001_027', 'B17001_004', 'B17001_018'),
+        survey = 'acs5',
         year = 2022,
         output = 'wide') %>% 
   mutate(
@@ -298,6 +314,7 @@ df_county <- get_acs(geography = 'county',
 df_colorado <- get_acs(geography = 'county',
                        # using the state argument to only fetch Colorado
                        state = "Colorado",
+                       survey = 'acs5',
                        variables = c('B01001_003', 'B01001_027', 'B17001_004', 'B17001_018'),
                        year = 2022,
                        output = 'wide')
@@ -370,7 +387,7 @@ df_colorado <- df_colorado %>%
   fmt_percent(columns = u5_perc_in_poverty, decimals = 1) %>%  
   #add table title
   tab_header(title = md("**Estimated child poverty in Colorado by county in 2022**")) %>% 
-  tab_source_note(source_note = "Data from 2022 American Community Survey from the U.S. Census Bureau") %>% 
+  tab_source_note(source_note = "Data from 2022 American Community Survey 5-year estimates from the U.S. Census Bureau") %>% 
   #apply new style to all column headers
   tab_style(
     locations = cells_column_labels(columns = everything()),
